@@ -1,0 +1,3 @@
+
+config = {}
+config.enableNPCTrading = true      --default true
